--- a/flask.service
+++ b/flask.service
@@ -7,10 +7,11 @@ User=ubuntu
 Group=ubuntu
 Environment="LANG=en_US.UTF-8"
 Environment="LANGUAGE=en_US.UTF-8:"
-WorkingDirectory=~/cocktail_party/
-&& source env/bin/activate\
+WorkingDirectory=/home/ubuntu/cocktail_party/
+ExecStart=/bin/bash -c "source env/bin/activate\
 && python3 server.py &>> flask.log"
 Restart=always
+
 
 [Install]
 WantedBy=multi-user.target
