--- a/nginx.conf
+++ b/nginx.conf
@@ -2,3 +2,10 @@ server {
     listen 80 default_server;
     location / { proxy_pass http://127.0.0.1:5000; }
 }
+
+server {
+    listen 80 default server;
+    listen [::]:80 default_server;
+    server_name _;
+    return 301 https://$host$request_uri;
+}
