--- a/nginx.conf
+++ b/nginx.conf
@@ -9,3 +9,9 @@ server {
     server_name _;
     return 301 https://$host$request_uri;
 }
+
+server {
+    listen 80;
+    server_name cocktailparty.fun www.cocktailparty.fun;
+    return 301 https://cocktailparty.fun$request_uri;
+}
