--- a/nginx.conf
+++ b/nginx.conf
@@ -7,11 +7,10 @@ server {
     listen 80 default server;
     listen [::]:80 default_server;
     server_name _;
-    return 301 https://$host$request_uri;
+    return 301 https://cocktailparty.fun$request_uri;
 }
 
 server {
-    listen 80;
-    server_name cocktailparty.fun www.cocktailparty.fun;
-    return 301 https://cocktailparty.fun$request_uri;
+    server_name www.cocktailparty.fun;
+    return 301 $scheme://cocktailparty.fun$request_uri;
 }
