--- a/nginx.conf
+++ b/nginx.conf
@@ -4,13 +4,13 @@ server {
 }
 
 server {
-    listen 80 default server;
-    listen [::]:80 default_server;
-    server_name _;
+    listen 80 default_server;
+    server_name cocktailparty.fun;
     return 301 https://cocktailparty.fun$request_uri;
 }
 
 server {
+    listen 80 default_server;
     server_name www.cocktailparty.fun;
-    return 301 $scheme://cocktailparty.fun$request_uri;
+    return 301 https://cocktailparty.fun$request_uri;
 }
